--- a/النوم.html
+++ b/النوم.html
@@ -8,7 +8,7 @@
 <link rel="icon" href="gglo.jpg">
 <title>فوائد النوم واضرار السهر </title>
 <!-- Bootstrap core CSS -->
-<link href="assets/css/bootstrap.min.css" rel="stylesheet">
+<link href="boostrab.min.css" rel="stylesheet">
 <!-- Fonts -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Lateef:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
